<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Physics Solver</string>
    <string name="title">Physics</string>
    <string name="titlebar">Physics Solver</string>
    <string name="menu_settings">Settings</string>
    <string name="description">Select a topic</string>
    <string name="description2">Enter Known Data (Leave unknown variable blank, squares will be calculated for you)</string>
    <string name="var">var</string>
    <string name="calculate">Calculate</string>
    <string name="answer">Answer</string>
    <string name="units">Units</string>
    <string name="section1">One-Dimensional Kinematics</string>
    <string name="section2">Two-Dimensional Kinematics</string>
    <string name="section3">Work and Energy</string>
    <string name="section4">Gravitation</string>
    <string name="eq1">d = v0 * t + 0.5 * a * t^2</string>
    <string name="eq2">vf = v0 + a * t</string>
    <string name="eq3">vf^2 = v0^2 + 2 * a * d</string>
    <string name="eq4">d = (v0 + vf)/ 2 * t</string>
    <string name="eqText">Equation Hurr</string>
    <string name="title_activity_calc">Calc</string>

</resources>